small changes to checkpoint1

--- a/project/checkpoint1.ipynb
+++ b/project/checkpoint1.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "[SteamCharts](https://steamcharts.com/) For Game Player Count Information\n",
     "\n",
-    "[SteamDB](https://steamdb.info/) For Any General Steam Game Information\n",
+    "[SteamDB](https://steamdb.info/) For General Steam Game Information\n",
     "\n",
     "[CSGOLIS](https://csgolis.com/) For Automatically Calculating Value of CSGO Inventories"
    ]
@@ -119,7 +119,7 @@
    "id": "d837413e-c950-46c6-b271-5bf8a574f511",
    "metadata": {},
    "source": [
-    " I used GEN AI like ChatGPT for informational purposes like explaining the Steam API endpoints and helping me debug my GET requests."
+    " I used GEN AI like ChatGPT for informational purposes like explaining the Steam API endpoints and helping me debug my HTTP requests."
    ]
   }
  ],
