actual decent little dashboard going

--- a/project/sandbox.ipynb
+++ b/project/sandbox.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "9cf49c87-dae1-4b7b-afee-fa93edc95fc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'helpers.mysql_helper' from '/home/wloving77/Githubs/school/ds6600_project/project/helpers/mysql_helper.py'>"
+       "<module 'helpers.mysql_helper' from '/Users/williamloving/Documents/Githubs/ds6600_project/project/helpers/mysql_helper.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,18 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4b8aa0c0-3f79-4c5c-8647-cadfee1af232",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No connection to close.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "steam_helper = steam_api_helper.APIHelper()\n",
     "mysql_helper = mysql_helper.MySQLHelper()"
@@ -46,51 +38,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "e3e5097e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'helpers.mysql_helper' has no attribute 'connect'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmysql_helper\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'helpers.mysql_helper' has no attribute 'connect'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection is already open.\n",
+      "Connection closed.\n"
      ]
     }
    ],
    "source": [
-    "mysql_helper.connect()"
+    "mysql_helper.connect()\n",
+    "mysql_helper.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "23315325",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'localhost         # Maps to self.host'"
+       "[{'display_name': 'MegaMigit75',\n",
+       "  'profile_url': 'https://steamcommunity.com/id/megamigit75'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pg_helper.host"
+    "steam_helper.searchSteamDisplayNames(\"MegaMigit75\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "720002e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "224004"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games = steam_helper.getAllSteamApps()\n",
+    "len(games)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "720002e0",
+   "id": "3974d532",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -112,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
