--- a/project/checkpoint2.ipynb
+++ b/project/checkpoint2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projec Check-in 2 DS 6600 Data Engineering and Visualization"
+    "# Project Check-in 2 DS 6600 Data Engineering and Visualization"
    ]
   },
   {
